fixed better contrast for error information on spidermanpage

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ html, body {
   padding: 0;
   height: 100vh;
   width: 100vw;
+  background-color: antiquewhite;
   }
 
 
@@ -110,4 +111,12 @@ html, body {
 
 @media (max-width: 480px) {
 
+}
+
+#errorContainer {
+  background-color: red;
+  border-radius: 3px;
+  width: auto;
+  color: white;
+  text-align: center;
 }
